+added Docker File

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<artifactId>password-validation-service-springboot-example</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>password-validation-service-springboot-example</name>
-
+	<packaging>jar</packaging>
 	<properties>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.source>1.8</maven.compiler.source>
@@ -38,6 +38,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>password-validation-service</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
